# Antrix

./: CMakeLists.txt  README.md
cmake/: SetDefinitions.cmake
dep/: CMakeLists.txt
dep/GameMonkey/: CMakeLists.txt  gmByteCode.cpp  gmCodeTree.cpp  gmMachine.cpp  gmMachine.h  gmThread.cpp
dep/loadlib/: mpq_libmpq.cpp  mpq_libmpq.h
dep/poco/: CMakeLists.txt
dep/poco/Data/: CMakeLists.txt
dep/poco/Data/MySQL/: CMakeLists.txt
dep/poco/Data/MySQL/include/Poco/Data/MySQL/: MySQL.h
dep/poco/Foundation/: CMakeLists.txt
dep/poco/JSON/: CMakeLists.txt
dep/poco/Net/: CMakeLists.txt
dep/poco/Util/: CMakeLists.txt
dep/poco/XML/: CMakeLists.txt
extras/: druid_todo.txt  general_todo.txt  hunter_todo.txt  mage_todo.txt  paladin_todo.txt  shaman_todo.txt  warlock_todo.txt  warrior_todo.txt
extras/example_scripts/: MoltenCore_Attunement_Check.gm  delayedQuestFinishEvent.gm  northshireQuests.gm  testAreaTriggerScript.gm  testInstanceAttunementScript.gm  theAttack.gm  theDefiasTraitor.gm
sql/: antrixworld.sql
src/: CMakeLists.txt  realms.conf
src/antrix/: CConsole.cpp  CConsole.h  CMakeLists.txt  Main.cpp  MainServerDefines.h  Master.cpp  Master.h  antrix.conf
src/game/: AIInterface.cpp  AIInterface.h  AddonMgr.cpp  AddonMgr.h  AlteracValley.cpp  AlteracValley.h  ArathiBasin.cpp  ArathiBasin.h  AreaTrigger.cpp  AreaTrigger.h  Arenas.cpp  Arenas.h  AuctionHouse.cpp  AuctionHouse.h  AuctionMgr.cpp  AuctionMgr.h  BattlegroundCommands.cpp  BattlegroundHandler.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  CMakeLists.txt  CThreads.cpp  CThreads.h  CellHandler.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CombatHandler.cpp  Container.cpp  Container.h  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  DuelHandler.cpp  (+124 more)
src/game/ScriptEngine/: ScriptEngine.cpp  ScriptEngine.h  ScriptFunctionTable.cpp  ScriptFunctions.cpp  ScriptFunctions.h
src/logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  CMakeLists.txt  LogonCommServer.cpp  LogonCommServer.h  LogonConsole.cpp  LogonConsole.h  LogonOpcodes.cpp  LogonOpcodes.h  LogonStdAfx.cpp  LogonStdAfx.h  Main.cpp  Main.h  PeriodicFunctionCall_Thread.h  RealmlistThreadMgr.cpp  logonserver.conf
src/scripts/: Script TO DO.txt
src/scripts/IRCPlugin/: IRCCommands.cpp  IRCPlugin.cpp  IRCPlugin.h  IRCSocket.cpp  IRCSocket.h
src/scripts/InstanceScripts/: Instance_HellfireRamparts.cpp  Instance_SethekkHalls.cpp  Instance_ShadowLabyrinth.cpp  Raid_BlackTemple.cpp  Setup.cpp
src/scripts/ServerStatusPlugin/: ServerStatusPlugin.cpp
src/scripts/SpellHandlers/: HunterSpells.cpp  ItemSpells_1.cpp  MageSpells.cpp  PaladinSpells.cpp  RogueSpells.cpp  Setup.cpp  Setup.h  ShamanSpells.cpp  WarlockSpells.cpp  WarriorSpells.cpp
src/scripts/serverstatus-xsl/: server_stats.xsl
src/shared/: AuthCodes.h  ByteBuffer.h  CMakeLists.txt  CallBack.cpp  CallBack.h  Common.h  CrashHandler.cpp  CrashHandler.h  Errors.h  LocationVector.h  Log.cpp  Log.h  MemoryLeaks.cpp  MemoryLeaks.h  MersenneTwister.cpp  MersenneTwister.h  NGLog.h  New-Bytebuffer.h  PreallocatedQueue.h  RC4Engine.h  Singleton.h  StackBuffer.h  StackWalker.cpp  StackWalker.h  Storage.h  TextLogger.cpp  TextLogger.h  Timer.h  Util.cpp  Util.h  WoWGuid.h  WorldPacket.h  antrix_getopt.cpp  antrix_getopt.h  crc32.cpp  crc32.h  svn_revision.h
src/shared/Auth/: BigNumber.cpp  BigNumber.h  Sha1.cpp  Sha1.h  WowCrypt.cpp  WowCrypt.h
src/shared/Config/: Config.cpp  Config.h  ConfigEnv.h
src/shared/Database/: DBC.cpp  DBC.h  DBCStores.cpp  DBCStores.h  DataStore.h  Database.cpp  Database.h  DatabaseEnv.h  Field.h  dbcfile.cpp  dbcfile.h
src/shared/Database/impl/: MySQLDatabase.cpp  MySQLDatabase.h  PostgreDatabase.cpp  PostgreDatabase.h
src/shared/Network/: ListenSocketWin32.h  Network.h  Socket.cpp  Socket.h  SocketDefines.h  SocketFreeBSD.cpp  SocketLinux.cpp  SocketMgrFreeBSD.cpp  SocketMgrLinux.cpp  SocketMgrWin32.cpp  SocketMgrWin32.h  SocketOps.h  SocketOpsWin32.cpp  SocketWin32.cpp
src/shared/Network-News-OLD/: Network.h
src/shared/Threading/: Condition.h  Guard.h  LockedQueue.h  Mutex.cpp  Mutex.h  Queue.h  RWLock.h  ThreadStarter.h  Threading.h
src/tools/: CMakeLists.txt
src/tools/map-extractor/: CMakeLists.txt
